<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.helidon.applications</groupId>
        <artifactId>helidon-applications-project</artifactId>
        <version>3.0.1</version>
    </parent>
    
    <groupId>com.neo.r2</groupId>
    <artifactId>r2-telemetry-system-endpoint</artifactId>
    <name>R2 Telemetry System Data Endpoint</name>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <mainClass>io.helidon.microprofile.cdi.Main</mainClass>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <org.jboss.jandex.version>2.1.1.Final</org.jboss.jandex.version>
        <helidon.version>3.0.1</helidon.version>
        <mockito.core.version>3.12.4</mockito.core.version>
    </properties>

    <dependencies>
        <!-- NeoUtil -->

        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-framework</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-elastic</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-startup</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-database</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-helidon-rest</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-helidon-config</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.neo.util</groupId>
            <artifactId>neoutil-mp-queue</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- Bean Discovery -->
        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jandex</artifactId>
            <version>2.1.1.Final</version>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- Helidon -->
        <dependency>
            <groupId>io.helidon.microprofile.bundles</groupId>
            <artifactId>helidon-microprofile</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.integrations.cdi</groupId>
            <artifactId>helidon-integrations-cdi-jpa</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.integrations.cdi</groupId>
            <artifactId>helidon-integrations-cdi-jta-weld</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.integrations.cdi</groupId>
            <artifactId>helidon-integrations-cdi-datasource-hikaricp</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.integrations.cdi</groupId>
            <artifactId>helidon-integrations-cdi-hibernate</artifactId>
            <version>${helidon.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.helidon.logging/helidon-logging-slf4j -->
        <dependency>
            <groupId>io.helidon.logging</groupId>
            <artifactId>helidon-logging-slf4j</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.microprofile.messaging</groupId>
            <artifactId>helidon-microprofile-messaging</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.microprofile.websocket</groupId>
            <artifactId>helidon-microprofile-websocket</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.messaging.jms</groupId>
            <artifactId>helidon-messaging-jms</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.microprofile.bean-validation</groupId>
            <artifactId>helidon-microprofile-bean-validation</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.microprofile.scheduling</groupId>
            <artifactId>helidon-microprofile-scheduling</artifactId>
            <version>${helidon.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.activemq</groupId>
            <artifactId>artemis-jakarta-client</artifactId>
            <version>2.23.1</version>
        </dependency>

        <!-- Drivers -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.4.0</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.18.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.18.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.18.0</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>io.helidon.microprofile.tests</groupId>
            <artifactId>helidon-microprofile-tests-junit5</artifactId>
            <version>${helidon.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito.core.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-libs</id>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jboss.jandex</groupId>
                <artifactId>jandex-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>make-index</id>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>